# control-room

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  pyproject.toml
control_room/: __init__.py  gitmeta.py  models.py  notifier.py  paths.py  registry.py  transcript_locator.py  wall.py
control_room/attention/: __init__.py  ack.py  detector.py  entrypoint.py  hook_events.py  hooks.json  jobs.py  liveness.py  models.py  notify.py  store.py  transcripts.py
control_room/board/: __init__.py  bucket.py  dispatch.py  elevate.py  generic_adapter.py  journal.py  (+5 more)
docs/: design-history.md  founding-note.md
tests/: conftest.py  test_attention_ack.py  test_attention_detector.py  test_attention_entrypoint.py  test_attention_golden_fixtures.py  test_attention_hook_events.py  test_attention_jobs.py  test_attention_liveness.py  test_attention_models.py  test_attention_notify.py  test_attention_store.py  test_attention_transcripts.py  test_board_bucket.py  test_board_dispatch.py  test_board_elevate.py  test_board_generic_adapter.py  test_board_journal.py  test_board_ledger.py  test_board_models.py  test_board_protocol_adapter.py  test_board_render.py  test_board_rollup.py  test_cost_pricing.py  test_cost_usage.py  test_gitmeta.py  test_interactive_discovery.py  test_jobs_discovery.py  test_models.py  test_notifier.py  test_paths.py  test_registry.py  test_shell_payload.py  test_shell_server.py  test_shell_state.py  test_shell_static_page.py  test_shell_static_page_js.py  test_transcript_locator.py  test_vendor_cctx_discovery.py  test_wall.py  test_workflow_discovery.py
(+22 files in other folders)
